--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
         <p>Новинки</p>
         <ul class="new-products">
           <li><!-- разделитель--></li>
-          <li><a href="catalog.html">Сливочное</a></li>
+          <li ><a class="creamy-ice-cream__button" href="catalog.html">Сливочное</a></li>
           <li>Щербеты</li>
           <li>Фруктовый лед</li>
           <li>Мелорин</li>
