Made hits cards, added "fast view" on hover.

--- a/catalog.html
+++ b/catalog.html
@@ -181,8 +181,7 @@
       <button type="button">Применить</button>
     </main>
 
-    <!-- Перенести данные в JSON -->
-    <ul class="tastes-creamy">
+    <!-- <ul class="tastes-creamy">
       <li class="tastes-item">
         <img src="IMG/Taste_1.png" alt="Мороженое 1" />
         <p class="price">
@@ -315,7 +314,7 @@
         </p>
         <a class="ice-cream-name" href="">Сливочное с мятным сиропом</a>
       </li>
-    </ul>
+    </ul> -->
 
     <footer class="main-footer">
       <span class="social-media-and-menu-container">
