--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link href="IMG/ice-cream.svg" rel="icon" type="image/png" />
     <link href="CSS/normalize.css" rel="stylesheet" />
     <link href="CSS/style.css" rel="stylesheet" />
-    <link rel="import" href="product-cards.html" />
   </head>
 
   <body class="background-offer-1 picture-offer-1">
@@ -197,13 +196,8 @@
       </div>
 
       <section class="hits-container">
-        <div data-src="product-cards.html"></div>
-<script>
-  var link = document.querySelector("link[rel=import]");
-  var content = link.import.querySelector("hits");
-  document.body.appendChild(content.cloneNode(true));
-</script>
-        <!-- <ul class="hits">
+
+        <ul class="hits">
           <li class="tastes-item">
             <div class="hit-container">
               <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
@@ -277,7 +271,7 @@
             </button>
           </li>
 
-           <li class="hit-item">
+           <!-- <li class="tastes-item">
             <div class="hit-container">
               <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
               <img src="IMG/Taste_3.png" alt="Мороженое 3" />
@@ -294,7 +288,7 @@
               Быстрый просмотр
             </button>
           </li> -->
-        <!-- </ul> -->
+         </ul>
       </section>
 
       <section class="SEO">
@@ -592,6 +586,6 @@
       </form>
     </section>
 
-    <!-- <script src="JS/index.js"></script> -->
+    <script src="JS/index.js"></script>
   </body>
 </html>
