Fonts added, fixed the location of the elements

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       </ul>
     </header>
 
-    <main class="container">
+    <main>
       <h2 class="visually-hidden">Предложения</h2>
 
       <article class="special-offer">
@@ -177,7 +177,7 @@
           </label>
         </form>
 
-        <button type="button">Давайте оба!</button>
+        <button  class="give-me-both-button" type="button">Давайте оба!</button>
       </article>
 
       <!-- Добавить смену текста при переключении -->
