--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
       </article>
 
       <!-- Добавить смену текста при переключении -->
-      <article class="special-offer visually-hidden">
+      <!-- <article class="special-offer visually-hidden">
         <p>
           Шоколадный пломбир
           <br />
@@ -199,7 +199,7 @@
         </p>
 
         <button type="button">Давайте оба!</button>
-      </article>
+      </article> -->
 
       <div class="banners">
         <section class="banner" id="first-banner">
