--- a/index.html
+++ b/index.html
@@ -21,13 +21,31 @@
         </a>
         <div class="menu-container">
           <ul class="site-navigation">
-            <li>
+            <li class="catalog-button-container">
               <button
                 class="catalog__button site-navigation-button"
                 type="button"
               >
                 Каталог
               </button>
+
+              <section class="modal modal-catalog-menu">
+                <h6 class="visually-hidden">Catalog menu</h6>
+                <form class="catalog-menu-form">
+                  <p>Новинки</p>
+                  <ul class="new-products">
+                    <li><!-- разделитель--></li>
+                    <li>
+                      <a class="creamy-ice-cream__button" href="catalog.html"
+                        >Сливочное</a
+                      >
+                    </li>
+                    <li>Щербеты</li>
+                    <li>Фруктовый лед</li>
+                    <li>Мелорин</li>
+                  </ul>
+                </form>
+              </section>
             </li>
 
             <li>
@@ -578,32 +596,15 @@
       </div>
     </footer>
 
-    <section class="modal modal-catalog-menu">
-      <h6 class="visually-hidden">Catalog menu</h6>
-      <form class="catalog-menu-form">
-        <p>Новинки</p>
-        <ul class="new-products">
-          <li><!-- разделитель--></li>
-          <li>
-            <a class="creamy-ice-cream__button" href="catalog.html"
-              >Сливочное</a
-            >
-          </li>
-          <li>Щербеты</li>
-          <li>Фруктовый лед</li>
-          <li>Мелорин</li>
-        </ul>
-      </form>
-    </section>
-
     <section class="modal modal-feedback">
       <h6 class="visually-hidden">Feedback form</h6>
       <form class="feedback-form">
-        <p>Мы обязательно вам ответим!</p>
-        <label><input type="text" placeholder="Имя Фамилия" /></label>
-        <label><input type="email" placeholder="email@example.com" /></label>
-        <label><input type="text" placeholder="В свободной форме" /></label>
-        <button type="submit">Отправить</button>
+        <p class="feedback-text">Мы обязательно вам ответим!</p>
+        <!-- крестик иконка -->
+        <label ><input class="feedback-name" type="text" placeholder="Имя Фамилия" /></label>
+        <label ><input class="feedback-email" type="email" placeholder="email@example.com" /></label>
+        <label ><textarea class="feedback-textarea" placeholder="В свободной форме"></textarea></label>
+        <button class="feedback-send-button" type="submit">Отправить</button>
       </form>
     </section>
 
