Fixed "hits" elements

--- a/index.html
+++ b/index.html
@@ -262,95 +262,85 @@
       <section class="hits-container">
         <ul class="hits">
           <li class="tastes-item">
-            <div class="hit-container">
-              <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
-              <img src="IMG/Taste_1.png" alt="Мороженое 1" />
-              <p class="price">
-                310
-                <span class="rub">₽</span>
-                <span class="unit-monetary">/кг</span>
-              </p>
-              <a class="ice-cream-name" href=""
-                >Сливочное с апельсиновым джемом и цитрусовой стружкой</a
-              >
-            </div>
-            <button class="hidden-button" type="button">
-              Быстрый просмотр
-            </button>
+            <a class="hit-container" href="">
+              <!-- <div class="hit-container"> -->
+                <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
+                <img src="IMG/Taste_1.png" alt="Мороженое 1" />
+                <p class="price">
+                  310
+                  <span class="rub">₽</span>
+                  <span class="unit-monetary">/кг</span>
+                </p>
+                <a class="ice-cream-name" href=""
+                  >Сливочное с апельсиновым джемом и цитрусовой стружкой</a
+                >
+              <!-- </div> -->
+              <button class="hidden-button" type="button">
+                Быстрый просмотр
+              </button>
+            </a>
           </li>
 
           <li class="tastes-item">
-            <div class="hit-container">
-              <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
-              <img src="IMG/Taste_2.png" alt="Мороженое 2" />
-              <p class="price">
-                380
-                <span class="rub">₽</span>
-                <span class="unit-monetary">/кг</span>
-              </p>
+            <a class="hit-container" href="">
+              <!-- <div class="hit-container"> -->
+                <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
+                <img src="IMG/Taste_2.png" alt="Мороженое 2" />
+                <p class="price">
+                  380
+                  <span class="rub">₽</span>
+                  <span class="unit-monetary">/кг</span>
+                </p>
 
-              <a class="ice-cream-name" href=""
-                >Сливочно-кофейное с кусочками шоколада</a
-              >
-            </div>
-            <button class="hidden-button" type="button">
-              Быстрый просмотр
-            </button>
+                <a class="ice-cream-name" href=""
+                  >Сливочно-кофейное с кусочками шоколада</a
+                >
+              <!-- </div> -->
+              <button class="hidden-button" type="button">
+                Быстрый просмотр
+              </button>
+            </a>
           </li>
 
           <li class="tastes-item">
-            <div class="hit-container">
-              <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
-              <img src="IMG/Taste_3.png" alt="Мороженое 3" />
-              <p class="price">
-                355
-                <span class="rub">₽</span>
-                <span class="unit-monetary">/кг</span>
-              </p>
-              <a class="ice-cream-name" href=""
-                >Сливочно-клубничное с присыпкой из белого шоколада</a
-              >
-            </div>
-            <button class="hidden-button" type="button">
-              Быстрый просмотр
-            </button>
+            <a class="hit-container" href="">
+              <!-- <div class="hit-container"> -->
+                <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
+                <img src="IMG/Taste_3.png" alt="Мороженое 3" />
+                <p class="price">
+                  355
+                  <span class="rub">₽</span>
+                  <span class="unit-monetary">/кг</span>
+                </p>
+                <a class="ice-cream-name" href=""
+                  >Сливочно-клубничное с присыпкой из белого шоколада</a
+                >
+              <!-- </div> -->
+              <button class="hidden-button" type="button">
+                Быстрый просмотр
+              </button>
+            </a>
           </li>
 
           <li class="tastes-item">
-            <div class="hit-container">
-              <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
-              <img src="IMG/Taste_4.png" alt="Мороженое 4" />
-              <p class="price">
-                415
-                <span class="rub">₽</span>
-                <span class="unit-monetary">/кг</span>
-              </p>
-              <a class="ice-cream-name" href=""
-                >Сливочное крем-брюле с карамельной подливкой</a
-              >
-            </div>
-            <button class="hidden-button" type="button">
-              Быстрый просмотр
-            </button>
+            <a class="hit-container" href="">
+              <!-- <div class="hit-container"> -->
+                <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
+                <img src="IMG/Taste_4.png" alt="Мороженое 4" />
+                <p class="price">
+                  415
+                  <span class="rub">₽</span>
+                  <span class="unit-monetary">/кг</span>
+                </p>
+                <a class="ice-cream-name" href=""
+                  >Сливочное крем-брюле с карамельной подливкой</a
+                >
+              <!-- </div> -->
+              <button class="hidden-button" type="button">
+                Быстрый просмотр
+              </button>
+            </a>
           </li>
-
-          <!-- <li class="tastes-item">
-            <div class="hit-container">
-              <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
-              <img src="IMG/Taste_3.png" alt="Мороженое 3" />
-              <p class="price">
-                355
-                <span class="rub">₽</span>
-                <span class="unit-monetary">/кг</span>
-              </p>
-              <a class="ice-cream-name" href=""
-                >Сливочно-клубничное с присыпкой из белого шоколада</a
-              >
-            </div>
-            <button class="hidden-button" type="button">
-              Быстрый просмотр
-            </button>
-          </li> -->
         </ul>
       </section>
 
@@ -480,7 +470,9 @@
             <li>8 812 450-25-25</li>
             <li>(с 10 до 20 ежедневно)</li>
           </ul>
-          <button type="button">Форма обратной связи</button>
+          <button class="feedback-button" type="button">
+            Форма обратной связи
+          </button>
         </section>
       </article>
     </main>
@@ -598,7 +590,8 @@
 
     <section class="modal modal-feedback">
       <h6 class="visually-hidden">Feedback form</h6>
-      <svg class="close-icon"
+      <svg
+        class="close-icon"
         xmlns="http://www.w3.org/2000/svg"
         width="18"
         height="17"
@@ -610,22 +603,29 @@
         />
       </svg>
       <form class="feedback-form">
-        <div class="inputs-container">
-          <p class="feedback-text">Мы обязательно вам ответим!</p>
-          <!-- крестик иконка -->
-          <input class="feedback-name" type="text" placeholder="Имя Фамилия" />
-          <input
-            class="feedback-email"
-            type="email"
-            placeholder="email@example.com"
-          />
-          <textarea
-            class="feedback-textarea"
-            placeholder="В свободной форме"
-          ></textarea>
-        </div>
-        <div class="send-button-container">
-          <button class="feedback-send-button" type="submit">Отправить</button>
+        <div class="darkness">
+          <div class="inputs-container">
+            <p class="feedback-text">Мы обязательно вам ответим!</p>
+            <input
+              class="feedback-name"
+              type="text"
+              placeholder="Имя Фамилия"
+            />
+            <input
+              class="feedback-email"
+              type="email"
+              placeholder="email@example.com"
+            />
+            <textarea
+              class="feedback-textarea"
+              placeholder="В свободной форме"
+            ></textarea>
+          </div>
+          <div class="send-button-container">
+            <button class="feedback-send-button" type="submit">
+              Отправить
+            </button>
+          </div>
         </div>
       </form>
     </section>
